# xxlib_cocos_cpp

./: .cocos-project.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  all.sln  run.bat  run_release.bat
Classes/: Anim.cpp  Anim.h  AppDelegate.cpp  AppDelegate.h  AppMacros.h  Bullet.h  Bullet.hpp  Cannon.h  Cannon.hpp  CatchFish.h  CatchFish.hpp  CatchFish_Init.h  CatchFish_Init.hpp  CatchFish_MakeBeeline.hpp  CatchFish_MakeRandomFish.h  CatchFish_MakeRandomFish.hpp  CatchFish_Update.h  CatchFish_Update.hpp  ClientPeer.h  ClientPeer.hpp  Config.h  Config.hpp  Dialer.h  Dialer.hpp  Dialer_Panel.h  Dialer_Panel.hpp  Dialer_UpdateCore.hpp  FileExts_PathwayPoint.inc  FileExts_class_lite.ajson.h  FileExts_class_lite.cpp  FileExts_class_lite.h  Fish.h  Fish.hpp  HelloWorldScene.cpp  HelloWorldScene.h  Listener.h  Listener.hpp  PKG_CatchFish_BigFish.h  PKG_CatchFish_BigFish.hpp  PKG_CatchFish_BombFish.h  (+127 more)
Resources/: loop.lua  main.lua
cocos2d/: CHANGELOG  CMakeLists.txt  README.md
cocos2d/cmake/: README.md  ios.toolchain.cmake
cocos2d/cmake/Modules/: CocosBuildHelpers.cmake  CocosBuildSet.cmake  CocosCompileOptions.cmake  CocosConfigDefine.cmake  CocosConfigDepend.cmake  CocosSelectModule.cmake  iOSBundleInfo.plist.in
cocos2d/cocos/: Android.mk  CMakeLists.txt  cocos2d.cpp  cocos2d.h
cocos2d/cocos/2d/: CCAction.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionEase.cpp  CCActionEase.h  CCActionGrid.cpp  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionProgressTimer.cpp  CCActionTiledGrid.cpp  CCAnimation.cpp  CCAnimation.h  CCAnimationCache.h  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCCameraBackgroundBrush.cpp  CCClippingNode.cpp  CCComponent.cpp  CCDrawNode.cpp  CCDrawNode.h  CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCFastTMXLayer.cpp  CCFastTMXLayer.h  CCFastTMXTiledMap.cpp  CCFontAtlas.cpp  CCFontAtlas.h  CCFontAtlasCache.cpp  CCFontAtlasCache.h  CCFontCharMap.cpp  CCFontCharMap.h  CCFontFNT.cpp  CCFontFNT.h  CCFontFreeType.cpp  CCFontFreeType.h  CCGrabber.cpp  CCGrabber.h  (+52 more)
cocos2d/cocos/3d/: CCAABB.cpp  CCAABB.h  CCAnimate3D.cpp  CCAnimation3D.cpp  CCBundle3D.cpp  CCBundle3DData.h  CCBundleReader.cpp  CCMesh.cpp  CCMeshSkin.cpp  CCMeshVertexIndexData.cpp  CCMotionStreak3D.cpp  CCMotionStreak3D.h  CCOBB.cpp  CCObjLoader.cpp  CCSkeleton3D.cpp  CCSkybox.cpp  CCSprite3D.cpp  CCSprite3DMaterial.cpp  CCTerrain.cpp  CCTerrain.h  CMakeLists.txt
cocos2d/cocos/audio/: AudioEngine.cpp
cocos2d/cocos/base/: CCAsyncTaskPool.h  CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCConsole.h  CCController-linux-win32.cpp  CCController.cpp  CCController.h  CCData.cpp  CCDataVisitor.cpp  CCDirector.cpp  CCDirector.h  CCEventController.h  CCEventDispatcher.cpp  CCEventKeyboard.cpp  CCEventKeyboard.h  CCEventListenerController.cpp  CCEventListenerController.h  CCEventListenerKeyboard.cpp  CCEventListenerKeyboard.h  CCEventMouse.cpp  CCIMEDelegate.h  CCIMEDispatcher.cpp  CCIMEDispatcher.h  CCProfiling.cpp  CCProfiling.h  CCProperties.cpp  CCProtocols.h  CCRef.cpp  CCRef.h  CCScheduler.cpp  CCScheduler.h  CCScriptSupport.cpp  CCScriptSupport.h  CCStencilStateManager.cpp  CCUserDefault.cpp  CCUserDefault.h  CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.h  (+14 more)
cocos2d/cocos/deprecated/: CCArray.cpp  CCArray.h  CCDeprecated.cpp  CCDeprecated.h  CCSet.cpp  (+6 more)
cocos2d/docs/: RELEASE_NOTES.md  RELEASE_NOTES_CN.md  doxygen.config
cocos2d/extensions/: CMakeLists.txt
deboost.context/: CMakeLists.txt
deboost.context/asm/: jump_x86_64_ms_pe_masm.asm  ontop_x86_64_ms_pe_masm.asm
deboost.context/win64/: fcontext.lib
lua/src/: lctype.c  loslib.c
lua_bind/: lua_all.hpp  lua_cc.hpp  lua_cc_application.hpp  lua_cc_data.hpp  lua_cc_director.hpp  lua_cc_event.hpp  lua_cc_eventlisteners.hpp  lua_cc_fileutils.hpp  lua_cc_label.hpp  lua_cc_ref.hpp  lua_cc_scene.hpp  lua_cc_sprite.hpp  lua_cc_texture.hpp  lua_cc_texturecache.hpp  lua_cc_uibutton.hpp  lua_cc_uiimageview.hpp  lua_cc_uilayout.hpp  lua_cc_uiloadingbar.hpp  lua_cc_uiwidget.hpp  lua_cc_userdefault.hpp  lua_cca.hpp  lua_ext.hpp  lua_func.hpp  lua_keys.hpp  lua_mempool.h  lua_new_xxx.hpp  lua_pushcall.hpp  lua_to_xxx.hpp  lua_xx.hpp  lua_xx_bbuffer.hpp  lua_xx_uv.hpp  lua_xx_uvdialer.hpp  lua_xx_uvdialerpeer.hpp  lua_xx_uvkcpdialer.hpp  lua_xx_uvkcppeer.hpp  lua_xx_uvluapeer.hpp  lua_xx_uvpeer.hpp  lua_xx_uvresolver.hpp  lua_xx_uvsimpeer.hpp  lua_xx_uvtcpdialer.hpp  (+1 more)
proj.android/: build.gradle  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
proj.ios_mac/cccpp1.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: AppController.h  AppController.mm  Info.plist  Reachability.m  RootViewController.mm
proj.ios_mac/mac/: Info.plist
proj.linux/: main.cpp
proj.win32/: SimulatorWin.cpp  build-cfg.json  cccpp1.sln  cccpp1.vcxproj  cccpp1.vcxproj.filters  game.rc  games.sln  games.vcxproj  games.vcxproj.filters  main.cpp  main.h  resource.h
res/: 1.frames  1.frames.ext  BonusGame.atlas  BonusGame.json  NET_class.lua  PKG_class.lua  all.pkm  all.plist  bg_effect_1.plist  g_coros.lua  libs.lua  longxia_move.plist  loop.lua  main.lua  main.lua copy  main_spin.lua  panel.lua  skeleton.atlas  skeleton.atlas.ext  skeleton.skel  untitled.tmx  xxx.lua
res_bak/: PKG_class.lua  main.lua  panel.lua
res_bak2/: main.lua  tmw_desert_spacing.tsx
res_bak3/: BONUS_TIMES_Font.fnt  bg_effect_0.plist  bg_effect_2.plist  bg_ui.plist  main.lua  symbol.plist  vip_wheel_pack.plist
res_bak4/: libs.lua  main.lua
xxlib/: ajson.hpp  fixed_function.hpp  ikcp.c  ikcp.h  lua.natvis  xx.h  xx.natvis  xx_asio.h  xx_bbuffer.h  xx_bbuffer.hpp  xx_chrono.h  xx_coros.h  xx_data.h  xx_data_queue.h  xx_data_rw.h  xx_dict.h  xx_dict.hpp  xx_epoll.h  xx_epoll_http.h  xx_epoll_kcp.h  xx_fixeddata_w.h  xx_list.h  xx_logger.h  xx_looper.h  xx_lua.h  xx_math.h  xx_mempool.h  xx_mempool.hpp  xx_mysql.h  xx_net.h  xx_object.h  xx_point.h  xx_pos.h  xx_queue.h  xx_random.h  xx_random.hpp  xx_scopeguard.h  xx_sharedlist.h  xx_sqlite.h  xx_string.h  (+8 more)
(+535 files in other folders)
